--- a/public/styles/other-profile.css
+++ b/public/styles/other-profile.css
@@ -132,7 +132,7 @@ ul li{
 }
 
 .user-button img.scrolled {
-    content: url("images/usericon\ dark.png");
+    content: url("../../images/usericon\ dark.png");
     width: 50px;
     height: 50x;
 
