--- a/public/styles/searchpage.css
+++ b/public/styles/searchpage.css
@@ -11,7 +11,7 @@ body {
 }
 
 .type {
-    background-image: url("images/searchicon.png"); 
+    background-image: url("../../images/searchicon.png"); 
     background-size: 20px; 
     background-position: 10px center; 
     background-repeat: no-repeat; 
@@ -95,7 +95,7 @@ body {
 }
 
 .user-button img.scrolled {
-    content: url("images/usericon\ dark.png");
+    content: url("../../images/usericon\ dark.png");
     width: 50px;
     height: 50x;
 }
@@ -336,7 +336,7 @@ ul li{
     -moz-border-radius: 15px;
     margin: -15px;
     padding: 15px;
-    background-image: url(images/cafeheaders/preludeh.png);
+    background-image: url(../../images/cafeheaders/preludeh.png);
     background-size: 100%;
     background-position: center;
     font-family: 'Poppins', sans-serif;
