--- a/src/views/other-profile.html
+++ b/src/views/other-profile.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Other Profile</title>
-    <link rel="stylesheet" href="other-profile.css">
+    <link rel="stylesheet" href="../../public/styles/other-profile.css">
 </head>
 
 <body>
     <div class="header">
-        <img class ="logo" src="images/Logo.png">
-        <img class = "designdot4" src="images/dots.png">
+        <img class ="logo" src="../../images/Logo.png">
+        <img class = "designdot4" src="../../images/dots.png">
 
         <div class="logo-name">
             <p class="web-name"><span class="Cafe-title">Cafe</span> <span class="St.-title">St.</span></p>
         </div>
         <ul>
-            <li id="home-link"><a href="homepage.html">Home</a></li>
+            <li id="home-link"><a href="index.html">Home</a></li>
             <li><a href="review.html">View Establishments</a></li>
             <li><a href="login.html">Log In</a></li>
             
@@ -25,7 +25,7 @@
         <div class="user-icon-container">
             <button class="user-button">
                 <a href="profile.html">
-                    <img src="images/usericon.png" alt="User Icon" class="user">
+                    <img src="../../images/usericon.png" alt="User Icon" class="user">
                 </a>
             </button>
             
@@ -34,15 +34,15 @@
 
     <div class="cover">
         <div class="cover-img">
-                <img src="images/cover1.jpeg" id="coverPic" alt="Cover image" class="coverImg">
+                <img src="../../images/cover1.jpeg" id="coverPic" alt="Cover image" class="coverImg">
         </div>
         <div class="profile-img">
-                <img src="images/user1.jpeg" id="profilePic" alt="Profile image" class="profile">
+                <img src="../../images/user1.jpeg" id="profilePic" alt="Profile image" class="profile">
         </div>
     </div>
 
     <div class="profile-upper">
-        <img class = "designdot" src="images/dots.png">
+        <img class = "designdot" src="../../images/dots.png">
         <div class="profile-name">
             <b><span class="username">Maki Asher</span></b><br>
             <i><b><span class="realname">@puppie</span></b></i>
@@ -53,11 +53,11 @@
         <span class="bio">Hello, Nice to meet you!</span>
     </div>
 
-    <img class = "designdot2" src="images/dots.png">
+    <img class = "designdot2" src="../../images/dots.png">
 
     <div class="profile-reviews-container">
         
-        <img class = "designdot3" src="images/dots.png">
+        <img class = "designdot3" src="../../images/dots.png">
         <a id="prevButton" class="prev" onclick="prevSlide()">&#10094;</a>
         <a id="nextButton" class="next" onclick="nextSlide()">&#10095;</a>
 
@@ -69,7 +69,7 @@
 
         <div id="profile-reviews-set1" class="profile-reviews" data-visible="true">
             <div class="review1-container">
-                <img src="images/dripkofilogo.jpg" class="review1">
+                <img src="../../images/dripkofilogo.jpg" class="review1">
 
                 <div class="review1-review">
                     <br>
@@ -88,7 +88,7 @@
             </div>
 
             <div class="review2-container">
-                <img src="images/obsecurelogo.jpg" class="review2">
+                <img src="../../images/obsecurelogo.jpg" class="review2">
 
                 <div class="review2-review">
                     <br>
@@ -106,7 +106,7 @@
             </div>
 
             <div class="review3-container">
-                <img src="images/cloudscapelogo.jpg" class="review3">
+                <img src="../../images/cloudscapelogo.jpg" class="review3">
 
                 <div class="review3-review">
                     <br>
@@ -128,7 +128,7 @@
          <!-- Second Page -->
          <div id="profile-reviews-set2" class="profile-reviews" data-visible="false">
             <div class="review1-container">
-                <img src="images/tomologo.jpg" class="review1">
+                <img src="../../images/tomologo.jpg" class="review1">
 
                 <div class="review1-review">
                     <br>
@@ -148,7 +148,7 @@
 
            
             <div class="review2-container">
-                <img src="images/preludelogo.jpg" class="review2">
+                <img src="../../images/preludelogo.jpg" class="review2">
 
                 <div class="review2-review">
                     <br>
@@ -168,7 +168,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
     <script>
 
         let currentSlideIndex = 1;
