--- a/src/views/searchpage.html
+++ b/src/views/searchpage.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Cafes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="searchpage.css">
-    <script src="searchpage.js" defer></script>
+    <link rel="stylesheet" href="../../public/styles/searchpage.css">
+    <script src="../../public/script/searchpage.js" defer></script>
 </head>
 <body>
 
 
     <div id="navbar" class="navbar">
-        <img src="images/Logo.png" class="logo"> 
+        <img src="../../images/Logo.png" class="logo"> 
         <a href="#" class="webname">
             <p class="web-name"><span class="Cafe-title">Cafe</span> <span class="St-title">St.</span></p>
         </a>
@@ -24,7 +24,7 @@
           <div class="user-icon-container">
             <div class="dropdown">
                 <button class="user-button" onclick="toggleDropdown()">
-                    <img src="images/usericon.png" alt="User Icon" id="icon" class="user">
+                    <img src="../../images/usericon.png" alt="User Icon" id="icon" class="user">
                 </button>
                 <div class="dropdown-content" id="dropdownContent">
                     <a href="sign-up.html">Sign Up</a>
@@ -48,7 +48,7 @@
         <div class="main">
             <div class="review-box">
                 <div class="unit1" id="unit1-background1">
-                    <img src="images/preludelogo.jpg" class="cafe-profile">
+                    <img src="../../images/preludelogo.jpg" class="cafe-profile">
                     <div class="info">
                         <p class="cafe-name">Prelude Cafe and Restaurant</p>
                         <p class="cafe-address">810 Castro Street, Manila</p>
@@ -79,13 +79,13 @@
                     </div>
                 </div>
                 <div class="unit3">
-                    <img src="images/elgatto.jpg" class="reviewer">
+                    <img src="../../images/elgatto.jpg" class="reviewer">
                     <div class="review-text">
                         <p>wow! what a great place and such a top tier service!!!</p>
                     </div>
                     <div class="reaction">
-                        <button class="like"><img src="images/dislike_light.png"></button>
-                        <button class="dislike"><img src="images/like_light.png"></i></button>
+                        <button class="like"><img src="../../images/dislike_light.png"></button>
+                        <button class="dislike"><img src="../../images/like_light.png"></i></button>
                     </div>
                 </div>
             </div>
