--- a/src/views/view-establishments.html
+++ b/src/views/view-establishments.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Reviews</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="view-establishments.css">
-    <link rel="stylesheet" href="index.css">
-    <script src="view-establishments.js" defer></script>
+    <link rel="stylesheet" href="../../public/styles/view-establishments.css">
+    <link rel="stylesheet" href="../../public/styles/index.css">
+    <script src="../../public/script/view-establishments.js" defer></script>
 </head>
 <body>
     
         <div id="navbar" class="navbar">
-            <img src="Cafe St Logo.PNG" class="logooo"> 
+            <img src="../../images/Logo.png" class="logooo"> 
             <a href="#" class="webname">
                 <span class="kape">Cafe</span>
                 <span class="st"> St.</span>
@@ -25,7 +25,7 @@
             <div class="user-icon-container">
                 <div class="dropdown">
                     <button class="user-button" onclick="toggleDropdown()">
-                        <img src="images/usericon.png" alt="User Icon" id="icon" class="user">
+                        <img src="../../images/usericon.png" alt="User Icon" id="icon" class="user">
                     </button>
                     <div class="dropdown-content" id="dropdownContent">
                         <a href="sign-up.html">Sign Up</a>
@@ -48,9 +48,10 @@
         </div>
  
         <div class="main">
-            <div class="review-box">
+            <a href="reviewpage.html" class = "box">
+            <div class="review-box" >
                 <div class="unit1" id="unit1-background1">
-                    <img src="images/preludelogo.jpg" class="cafe-profile">
+                    <img src="../../images/preludelogo.jpg" class="cafe-profile">
                     <div class="info">
                         <p class="cafe-name">Prelude Cafe and Restaurant</p>
                         <p class="cafe-address">810 Castro Street, Manila</p>
@@ -81,19 +82,21 @@
                     </div>
                 </div>
                 <div class="unit3">
-                    <img src="images/elgatto.jpg" class="reviewer">
+                    <img src="../../images/elgatto.jpg" class="reviewer">
                     <div class="review-text">
                         <p>wow! what a great place and such a top tier service!!!</p>
                     </div>
                     <div class="reaction">
-                        <button class="like"><img src="images/dislike_light.png"></button>
-                        <button class="dislike"><img src="images/like_light.png"></i></button>
+                        <button class="like"><img src="../../images/dislike_light.png"></button>
+                        <button class="dislike"><img src="../../images/like_light.png"></i></button>
                     </div>
                 </div>
             </div>
+            </a>
+            <a href="reviewpage.html" class = "box">
             <div class="review-box">
                 <div class="unit1" id="unit1-background2">
-                    <img src="images/cloudscapelogo.jpg" class="cafe-profile">
+                    <img src="../../images/cloudscapelogo.jpg" class="cafe-profile">
                     <div class="info">
                         <p class="cafe-name">Cloudscape</p>
                         <p class="cafe-address">3rd Floor D' Students Place, Vito Cruz Taft Avenue, Malate, Manila, Philippines</p>
@@ -125,21 +128,22 @@
                     </div>
                 </div>
                 <div class="unit3">
-                    <img src="images/dog.jpg" class="reviewer">
+                    <img src="../../images/dog.jpg" class="reviewer">
                     <div class="review-text">
                         <p>wow! what a great place and such a top tier service!!!</p>
                     </div>
                     <div class="reaction">
-                        <button class="like"><img src="images/dislike_light.png"></button>
-                        <button class="dislike"><img src="images/like_light.png"></i></button>
+                        <button class="like"><img src="../../images/dislike_light.png"></button>
+                        <button class="dislike"><img src="../../images/like_light.png"></i></button>
 
                     </div>
                 </div>
             </div>
-          
+        </a>
+        <a href="reviewpage.html" class = "box">
             <div class="review-box">
                 <div class="unit1" id="unit1-background3">
-                    <img src="images/obsecurelogo.jpg" class="cafe-profile">
+                    <img src="../../images/obsecurelogo.jpg" class="cafe-profile">
                     <div class="info">
                         <p class="cafe-name">Obscure Cafe</p>
                         <p class="cafe-address">1/F, One Archer Place, Taft Avenue Corner Castro Street, Manila, Metro Manila Philippines</p>
@@ -171,20 +175,22 @@
                     </div>
                 </div>
                 <div class="unit3">
-                    <img src="images/elgatto.jpg" class="reviewer">
+                    <img src="../../images/elgatto.jpg" class="reviewer">
                     <div class="review-text">
                         <p>wow! what a great place and such a top tier service!!!</p>
                     </div>
                     <div class="reaction">
-                        <button class="like"><img src="images/dislike_light.png"></button>
-                        <button class="dislike"><img src="images/like_light.png"></i></button>
+                        <button class="like"><img src="../../images/dislike_light.png"></button>
+                        <button class="dislike"><img src="../../images/like_light.png"></i></button>
                     </div>
                 </div>
             </div>
+        </a>
            
+        <a href="reviewpage.html" class = "box">
             <div class="review-box">
                 <div class="unit1" id="unit1-background4">
-                    <img src="images/tomologo.jpg" class="cafe-profile">
+                    <img src="../../images/tomologo.jpg" class="cafe-profile">
                     <div class="info">
                         <p class="cafe-name">TOMO Coffee</p>
                         <p class="cafe-address">University Mall, Taft Avenue</p>
@@ -216,20 +222,22 @@
                     </div>
                 </div>
                 <div class="unit3">
-                    <img src="images/dog.jpg" class="reviewer">
+                    <img src="../../images/dog.jpg" class="reviewer">
                     <div class="review-text">
                         <p>wow! what a great place and such a top tier service!!!</p>
                     </div>
                     <div class="reaction">
-                        <button class="like"><img src="images/dislike_light.png"></button>
-                        <button class="dislike"><img src="images/like_light.png"></i></button>
+                        <button class="like"><img src="../../images/dislike_light.png"></button>
+                        <button class="dislike"><img src="../../images/like_light.png"></i></button>
                     </div>
                 </div>
             </div>
+        </a>
     
+        <a href="reviewpage.html" class = "box">
             <div class="review-box">
                 <div class="unit1" id="unit1-background5">
-                    <img src="images/dripkofilogo.jpg" class="cafe-profile">
+                    <img src="../../images/dripkofilogo.jpg" class="cafe-profile">
                     <div class="info">
                         <p class="cafe-name">Drip Kofi</p>
                         <p class="cafe-address">Unit G5, Burgundy Transpacific Place, Taft Avenue</p>
@@ -261,20 +269,21 @@
                     </div>
                 </div>
                 <div class="unit3">
-                    <img src="images/dog.jpg" class="reviewer">
+                    <img src="../../images/dog.jpg" class="reviewer">
                     <div class="review-text">
                         <p>wow! what a great place and such a top tier service!!!</p>
                     </div>
                     <div class="reaction">
-                        <button class="like"><img src="images/dislike_light.png"></button>
-                        <button class="dislike"><img src="images/like_light.png"></i></button>
+                        <button class="like"><img src="../../images/dislike_light.png"></button>
+                        <button class="dislike"><img src="../../images/like_light.png"></i></button>
                     </div>
                 </div>
             </div>
-    
+        </a>
+        <a href="reviewpage.html" class = "box">
             <div class="review-box">
                 <div class="unit1" id="unit1-background6">
-                    <img src="images/sblogo.jpg" class="cafe-profile">
+                    <img src="../../mages/sblogo.jpg" class="cafe-profile">
                     <div class="info">
                         <p class="cafe-name">Starbucks Greencourt</p>
                         <p class="cafe-address">Fidel A.Reyes, Malate, Manila, 1004 Metro Manila</p>
@@ -305,17 +314,18 @@
                     </div>
                 </div>
                 <div class="unit3">
-                    <img src="images/dog.jpg" class="reviewer">
+                    <img src="../../images/dog.jpg" class="reviewer">
                     <div class="review-text">
                         <p>wow! what a great place and such a top tier service!!!</p>
                     </div>
                     <div class="reaction">
-                        <button class="like"><img src="images/dislike_light.png"></button>
-                    <button class="dislike"><img src="images/like_light.png"></button>
+                        <button class="like"><img src="../../images/dislike_light.png"></button>
+                    <button class="dislike"><img src="../../images/like_light.png"></button>
                     </div>
                 </div>
             </div>
-        </div>
+            </div>
+        </a>
 
     </div>
 </body>
