--- a/public/styles/view-establishments.css
+++ b/public/styles/view-establishments.css
@@ -22,7 +22,7 @@ body {
 
 
 .type {
-    background-image: url("images/searchicon.png"); 
+    background-image: url("../../images/searchicon.png"); 
     background-size: 20px; 
     background-position: 10px center; 
     background-repeat: no-repeat; 
@@ -208,7 +208,7 @@ body {
     width: 500px;
     height: 250px;
     border-radius: 15px;
-    background-color: #cbaf91;
+    background-color: #d1ae8d;
     padding: 15px;
     display: flex;
     flex-direction: column;
@@ -216,6 +216,19 @@ body {
     z-index: 1;
     margin: 50px;
     margin-bottom: -5px;
+    transition: transform 0.3s ease-in-out; /* Apply transition to the transform property */
+}
+
+.review-box:hover{
+    transform: scale(1.01); /* Apply the transformation on hover */
+}
+
+hr{
+    width: 90%;
+    border-color: #4D2D18;
+    border-width: 1px;
+    opacity: 0.5;
+
 }
 
 #unit1-background1 {
@@ -226,7 +239,7 @@ body {
     -moz-border-radius: 15px;
     margin: -15px;
     padding: 15px;
-    background-image: url(images/cafeheaders/preludeh.png);
+    background-image: url(../../images/cafeheaders/preludeh.png);
     background-size: 100%;
     background-position: center;
     font-family: 'Poppins', sans-serif;
@@ -240,7 +253,7 @@ body {
     -moz-border-radius: 15px;
     margin: -15px;
     padding: 15px;
-    background-image: url("images/cafeheaders/cloudscapeh.png");
+    background-image: url("../../images/cafeheaders/cloudscapeh.png");
     background-size: 100%;
     background-position: center;
     font-family: 'Poppins', sans-serif;
@@ -254,7 +267,7 @@ body {
     -moz-border-radius: 15px;
     margin: -15px;
     padding: 15px;
-    background-image: url(images/cafeheaders/obsecureh.png);
+    background-image: url(../../images/cafeheaders/obsecureh.png);
     background-size: 110%;
     background-position: center;
     font-family: 'Poppins', sans-serif;
@@ -268,7 +281,7 @@ body {
     -moz-border-radius: 15px;
     margin: -15px;
     padding: 15px;
-    background-image: url(images/cafeheaders/tomoh.png);
+    background-image: url(../../images/cafeheaders/tomoh.png);
     background-size: 115%;
     background-position: center;
     font-family: 'Poppins', sans-serif;
@@ -282,10 +295,14 @@ body {
     -moz-border-radius: 15px;
     margin: -15px;
     padding: 15px;
-    background-image: url(images/cafeheaders/dripkofih.png);
+    background-image: url(../../images/cafeheaders/dripkofih.png);
     background-size: 100%;
     background-position: 90%;
     font-family: 'Poppins', sans-serif;
+}
+
+.box{
+    text-decoration: none;
 }
 
 #unit1-background6 {
@@ -296,7 +313,7 @@ body {
     -moz-border-radius: 15px;
     margin: -15px;
     padding: 15px;
-    background-image: url("images/cafeheaders/starbsh.png");
+    background-image: url("../../images/cafeheaders/starbsh.png");
     background-size: 100%;
     background-position: top;
     font-family: 'Poppins', sans-serif;
@@ -385,7 +402,7 @@ margin-left: 2px;
 
 .cafe-address {
     font-size: 12px;
-    color: white;
+    color: #4D2D18;
     margin-top: -20px;
 }
 
@@ -496,7 +513,7 @@ button {
 }
 
 .user-button img.scrolled {
-    content: url("images/usericon\ dark.png");
+    content: url("../../images/usericon\ dark.png");
     width: 50px;
     height: 50x;
 }
