--- a/src/views/login.html
+++ b/src/views/login.html
@@ -4,15 +4,14 @@
   <meta charset="UTF-8">
   <title>Cafe St.</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./login.css">
+  <link rel="stylesheet" href="../../public/styles/login.css">
 </head>
 <body>
 <div id="container" class="container">
   <!-- Website Branding -->
   <div class="website-branding">
-    <img src="images/Logo.png" alt="Cafe St. Logo" class="website-logo">
-    <span class="cafe">Cafe</span>
-    <span class="st">St.</span>
+    <img src="../../images/Logo.png" alt="Cafe St. Logo" class="website-logo">
+    <p class="web-name"><span class="cafe">Cafe</span> <span class="st">St.</span></p>
   </div>
   <!-- FORM SECTION -->
   <div class="row">
@@ -23,9 +22,9 @@
           <!-- Profile Picture Upload and About Me Section on the left -->
           <div class="left-section">
             <div class="input-group profile-pic-upload">
-              <img id="profilePic" src="images/user.png" alt="Profile Picture" />
+              <img id="profilePic" src="../../images/user.png" alt="Profile Picture" />
               <label for="profileImageUpload" class="edit-profile-pic">
-                <img src="images/draw.png" alt="Edit" />
+                <img src="../../images/draw.png" alt="Edit" />
               </label>
               <input id="profileImageUpload" type="file" accept="image/*" onchange="loadFile(event)" style="display: none;">
             </div>
@@ -61,6 +60,9 @@
     </div>
     <!-- END SIGN UP -->
     <!-- SIGN IN -->
+    <a href="index.html" class="returnbttn">
+      <img src="../../images/return.png" class="returnbttnimg" alt="Return">
+  </a> 
     <div class="col align-items-center flex-col sign-in">
       <div class="form-wrapper align-items-center">
         <div class="form sign-in">
@@ -85,6 +87,7 @@
   </div>
   <!-- CONTENT SECTION -->
   <div class="row content-row">
+ 
     <!-- SIGN IN CONTENT -->
     <div class="col align-items-center flex-col">
       <div class="text sign-in">
@@ -108,7 +111,7 @@
   </div>
   <!-- END CONTENT SECTION -->
 </div>
-<script src="./login.js"></script>
+<script src="../../public/script/login.js"></script>
 <script>
 function loadFile(event) {
   var reader = new FileReader();
