--- a/src/views/popup.html
+++ b/src/views/popup.html
@@ -5,7 +5,7 @@
   <title>Cafe St.</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" href="./popup.css">
+  <link rel="stylesheet" href="../../public/styles/popup.css">
   <style>
     body, button {
       font-family: 'Poppins', sans-serif;
@@ -25,10 +25,10 @@
     You have logged in successfully!
   </div>
   <div class="dismiss-btn">
-    <button onclick="location.href='homepage.html'">Dismiss</button>
+    <button onclick="location.href='index.html'">Dismiss</button>
   </div>
 </div>
 
-<script src="./popup.js"></script>
+<script src="popup.js"></script>
 </body>
 </html>
