--- a/src/views/sign-up.html
+++ b/src/views/sign-up.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>Cafe St.</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./login.css">
+  <link rel="stylesheet" href="../../public/styles/login.css">
 </head>
 <body>
 <div id="container" class="container">
   <!-- Website Branding -->
   <div class="website-branding">
-    <img src="images/Logo.png" alt="Cafe St. Logo" class="website-logo">
+    <img src="../../images/Logo.png" alt="Cafe St. Logo" class="website-logo">
     <span class="cafe">Cafe</span>
     <span class="st">St.</span>
   </div>
@@ -23,9 +23,9 @@
           <!-- Profile Picture Upload and About Me Section on the left -->
           <div class="left-section">
             <div class="input-group profile-pic-upload">
-              <img id="profilePic" src="images/user.png" alt="Profile Picture" />
+              <img id="profilePic" src="../../images/user.png" alt="Profile Picture" />
               <label for="profileImageUpload" class="edit-profile-pic">
-                <img src="images/draw.png" alt="Edit" />
+                <img src="../../images/draw.png" alt="Edit" />
               </label>
               <input id="profileImageUpload" type="file" accept="image/*" onchange="loadFile(event)" style="display: none;">
             </div>
@@ -108,7 +108,7 @@
   </div>
   <!-- END CONTENT SECTION -->
 </div>
-<script src="./login.js"></script>
+<script src="../../public/script/login.js"></script>
 <script>
 function loadFile(event) {
   var reader = new FileReader();
